fix issue where user gets error when not clicking on a div (ex. clicking in padding, margin, or gap) inside projectRow. issue due to condition on projectRow click listener that was expecting a click on a child of projectRow so created a variable seeking that data-id of that target's parentNode. This did not work with when projectRow is the click target as it's parent is the table who doesnt have the data we need. created a condition for those times the click lands on the projectRow itself to do the same tasks.

--- a/src/style.css
+++ b/src/style.css
@@ -175,7 +175,7 @@
   display: flex;
   align-items: center;
   grid-area: project-due;
-  padding: 2px 0 2px 15px
+  margin: 2px 0 2px 15px
 }
 
 .project-dueless {
